server/packages/sandbox-agent/tests/http/snapshots/http_endpoints__agent_endpoints__agent_endpoints_snapshots@agents_list_global.snap
---
source: server/packages/sandbox-agent/tests/http/agent_endpoints.rs
expression: normalize_agent_list(&agents)
---
agents:
  - id: amp
  - id: claude
  - id: codex
  - id: mock
  - id: opencode
