server/packages/sandbox-agent/tests/http/snapshots/http_endpoints__agent_endpoints__agent_endpoints_snapshots@health_global.snap
---
source: server/packages/sandbox-agent/tests/http/agent_endpoints.rs
expression: normalize_health(&health)
---
status: ok
