server/packages/sandbox-agent/tests/http/snapshots/http_endpoints__agent_endpoints__auth_snapshots@auth_health_public_global.snap
---
source: server/packages/sandbox-agent/tests/http/agent_endpoints.rs
expression: "json!({ \"status\": status.as_u16(), \"payload\": normalize_health(&payload), })"
---
payload:
  status: ok
status: 200
