server/packages/sandbox-agent/tests/http/snapshots/http_endpoints__agent_endpoints__auth_snapshots@auth_valid_token_global.snap
---
source: server/packages/sandbox-agent/tests/http/agent_endpoints.rs
expression: "json!({\n    \"status\": status.as_u16(), \"payload\": normalize_agent_list(&payload),\n})"
---
payload:
  agents:
    - id: amp
    - id: claude
    - id: codex
    - id: mock
    - id: opencode
status: 200
