server/packages/sandbox-agent/tests/http/snapshots/http_endpoints__agent_endpoints__cors_snapshots@cors_actual_global.snap
---
source: server/packages/sandbox-agent/tests/http/agent_endpoints.rs
expression: "json!({\n    \"cors\": snapshot_cors(status, &headers), \"payload\":\n    normalize_health(&payload),\n})"
---
cors:
  access-control-allow-origin: "http://example.com"
  status: 200
  vary: "origin, access-control-request-method, access-control-request-headers"
payload:
  status: ok
